--- a/src/community/pom.xml
+++ b/src/community/pom.xml
@@ -5,7 +5,7 @@
  application directory.
  --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-    <parent>
+  <parent>
     <groupId>org.geoserver</groupId>
     <artifactId>geoserver</artifactId>
     <version>2.17-SNAPSHOT</version>
@@ -70,18 +70,19 @@
           <descriptor>release/ext-python.xml</descriptor>
           <descriptor>release/ext-jdbcstore.xml</descriptor>
           <descriptor>release/ext-ncwms.xml</descriptor>
-          <descriptor>release/ext-gwc-sqlite.xml</descriptor> 
-	  <!--descriptor>release/ext-geogig.xml</descriptor>-->
+          <descriptor>release/ext-gwc-sqlite.xml</descriptor>
+          <descriptor>release/ext-gwc-mongo.xml</descriptor>
+          <!--descriptor>release/ext-geogig.xml</descriptor>-->
           <descriptor>release/ext-oauth2-google.xml</descriptor>
           <descriptor>release/ext-oauth2-github.xml</descriptor>
           <descriptor>release/ext-oauth2-geonode.xml</descriptor>
           <descriptor>release/ext-oauth2-openid-connect.xml</descriptor>
           <descriptor>release/ext-keycloak.xml</descriptor>
           <descriptor>release/ext-backup-restore.xml</descriptor>
-          <descriptor>release/ext-wmts-multi-dimensional.xml</descriptor> 
-          <descriptor>release/ext-saml.xml</descriptor> 
+          <descriptor>release/ext-wmts-multi-dimensional.xml</descriptor>
+          <descriptor>release/ext-saml.xml</descriptor>
           <descriptor>release/ext-notification.xml</descriptor>
-          <descriptor>release/ext-ows-simulate.xml</descriptor> 
+          <descriptor>release/ext-ows-simulate.xml</descriptor>
           <descriptor>release/ext-jdbc-metrics.xml</descriptor>
           <descriptor>release/ext-opensearch-eo.xml</descriptor>
           <descriptor>release/ext-mbstyle.xml</descriptor> 
@@ -243,7 +244,7 @@
         <module>wps-remote</module>
         <module>wps-jdbc</module>
         <module>release</module>
-	<!--<module>geogig</module>-->
+        <!--<module>geogig</module>-->
         <module>gwc-distributed</module>
         <module>jdbcstore</module>
         <module>gdal</module>
@@ -253,6 +254,8 @@
         <module>ncwms</module>
         <module>web-resource</module>
         <module>gwc-sqlite</module>
+        <module>gwc-mongo</module>
+        <module>gwc-elasticsearch</module>
         <module>geostyler</module>
         <module>security</module>
         <module>security/oauth2-core</module>
@@ -508,6 +511,18 @@
       <id>gwc-sqlite</id>
       <modules>
         <module>gwc-sqlite</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>gwc-mongo</id>
+      <modules>
+        <module>gwc-mongo</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>gwc-elasticsearch</id>
+      <modules>
+        <module>gwc-elasticsearch</module>
       </modules>
     </profile>
     <profile>
